--- a/DoctorWPF/App.config
+++ b/DoctorWPF/App.config
@@ -8,8 +8,10 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
   </startup>
   <connectionStrings>
-    
-  <add name="DoctorEntities" connectionString="metadata=res://*/Doctor.csdl|res://*/Doctor.ssdl|res://*/Doctor.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\mssqllocaldb;initial catalog=Doctor;integrated security=True;pooling=False;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+    <add name="DoctorEntities" connectionString="metadata=res://*/Doctor.csdl|res://*/Doctor.ssdl|res://*/Doctor.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\mssqllocaldb;initial catalog=Doctor;integrated security=True;pooling=False;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="DoctorEntities1" connectionString="metadata=res://*/Doctor.csdl|res://*/Doctor.ssdl|res://*/Doctor.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\mssqllocaldb;initial catalog=Doctor;integrated security=True;pooling=False;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="DoctorEntities2" connectionString="metadata=res://*/DoctorDB.csdl|res://*/DoctorDB.ssdl|res://*/DoctorDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\mssqllocaldb;initial catalog=Doctor;integrated security=True;pooling=False;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
